--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml+jpg" href="favicon.jpg" />
+    <link rel="preload" href="/src/assets/images/OsuButton.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OsuTyumenCup</title>
   </head>
