--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preload" href="/src/assets/images/OsuButton.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OsuTyumenCup</title>
+    <meta name="description" content="Официальный сайт турнира Тюменской области по ритм-игре Osu!">
   </head>
   <body>
     <div id="root"></div>
