--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml+jpg" href="favicon.jpg" />
     <link rel="preload" href="/src/assets/images/OsuButton.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="BZThAklhto0N36EY7GcnspI56GQWzVYecduoCXIXTkg" />
   </head>
   <body>
     <div id="root"></div>
