add: yandex verification SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preload" href="/src/assets/images/OsuButton.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="BZThAklhto0N36EY7GcnspI56GQWzVYecduoCXIXTkg" />
+    <meta name="yandex-verification" content="bd9f74b24fa9515f" />
   </head>
   <body>
     <div id="root"></div>
