delete: middleware yandex

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="BZThAklhto0N36EY7GcnspI56GQWzVYecduoCXIXTkg" />
     <meta name="yandex-verification" content="bd9f74b24fa9515f" />
+    <title>OsuTyumenCup2025</title>
   </head>
   <body>
     <div id="root"></div>
